--- a/branches/Free/OpenFlipper/widgets/optionsWidget/optionsWidget.ui
+++ b/branches/Free/OpenFlipper/widgets/optionsWidget/optionsWidget.ui
@@ -23,7 +23,7 @@
       <string/>
      </property>
      <property name="currentIndex">
-      <number>0</number>
+      <number>2</number>
      </property>
      <property name="usesScrollButtons">
       <bool>true</bool>
@@ -425,6 +425,12 @@
             </item>
             <item>
              <widget class="QDoubleSpinBox" name="minimalSceneSize">
+              <property name="minimumSize">
+               <size>
+                <width>86</width>
+                <height>0</height>
+               </size>
+              </property>
               <property name="maximumSize">
                <size>
                 <width>70</width>
@@ -439,6 +445,9 @@
               </property>
               <property name="whatsThis">
                <string>Bounding box of the scene will have at least the entered size</string>
+              </property>
+              <property name="decimals">
+               <number>3</number>
               </property>
               <property name="minimum">
                <double>0.000000000000000</double>
