--- a/branches/Free/OpenFlipper/LicenseManager/keyGen/keygen.ui
+++ b/branches/Free/OpenFlipper/LicenseManager/keyGen/keygen.ui
@@ -58,6 +58,13 @@
         <property name="fieldGrowthPolicy">
          <enum>QFormLayout::ExpandingFieldsGrow</enum>
         </property>
+        <item row="0" column="0">
+         <widget class="QLabel" name="label_6">
+          <property name="text">
+           <string>Filename</string>
+          </property>
+         </widget>
+        </item>
         <item row="0" column="1">
          <widget class="QLineEdit" name="fileNameBox"/>
         </item>
@@ -91,22 +98,15 @@
         <item row="3" column="1">
          <widget class="QLineEdit" name="cpuHashBox"/>
         </item>
-        <item row="0" column="0">
-         <widget class="QLabel" name="label_6">
-          <property name="text">
-           <string>Filename</string>
-          </property>
-         </widget>
-        </item>
-        <item row="4" column="1">
-         <widget class="QLineEdit" name="productIDBox"/>
-        </item>
         <item row="4" column="0">
          <widget class="QLabel" name="label_11">
           <property name="text">
            <string>ProductID</string>
           </property>
          </widget>
+        </item>
+        <item row="4" column="1">
+         <widget class="QLineEdit" name="productIDBox"/>
         </item>
         <item row="5" column="0">
          <widget class="QLabel" name="label_12">
@@ -117,6 +117,13 @@
         </item>
         <item row="5" column="1">
          <widget class="QLineEdit" name="signatureBox"/>
+        </item>
+        <item row="6" column="1">
+         <widget class="QCheckBox" name="ignoreSigBox">
+          <property name="text">
+           <string>Ignore Invalid Signature</string>
+          </property>
+         </widget>
         </item>
        </layout>
       </item>
